--- a/Ap-Bokifa/Backend/package.json
+++ b/Ap-Bokifa/Backend/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed:products": "node ./src/seed/seedProducts.js",
-    "seed:images": "node ./src/seed/uploadImages.js"
+    "seed:images": "node ./src/seed/uploadImages.js",
+    "seed:blogs": "node ./src/seed/seedBlogs.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
