backend almost done

--- a/Ap-Bokifa/Backend/package.json
+++ b/Ap-Bokifa/Backend/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed:products": "node ./src/seed/seedProducts.js",
     "seed:images": "node ./src/seed/uploadImages.js",
-    "seed:blogs": "node ./src/seed/seedBlogs.js"
+    "seed:blogs": "node ./src/seed/seedBlogs.js",
+    "ur": "node ./src/seed/uploadAndReplace.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "glob": "^13.0.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
