--- a/Ap-Bokifa/Frontend/package.json
+++ b/Ap-Bokifa/Frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
     "prop-types": "^15.8.1",
